syntax = "proto3";

package models;

enum AdTypeEnum {
  EXPERIENCE = 0;
  AVAILABILITY = 1;
  JOB_OFFER = 2;
}

enum CountryEnum {
  FRANCE = 0;
  GERMANY = 1;
  SPAIN = 2;
  ITALY = 3;
  UNITED_KINGDOM = 4;
  UNITED_STATES = 5;
}

enum SalaireCurrencyEnum {
  EU = 0;
  DOLLAR = 1;
}

enum JobOfferStatusEnum {
  PENDING = 0;
  APPROVED = 1;
  REJECTED = 2;
}

message Address {
  string city = 1;
  string zip_code = 2;
  CountryEnum country = 3;
}

message DateRange {
  string start_date = 1;
  string end_date = 2;
}

message JobCategory {
  string category = 1;
  string sub_category = 2;
}


message Ad {
  string id = 1;
  string title = 2;
  string user_id = 3;
  DateRange date_range = 4;
  double salary_amount = 5;
  SalaireCurrencyEnum salary_currency = 6;
  Address address = 7;
  string description = 8;
  AdTypeEnum ad_type = 9;
  JobCategory job_category = 10;

}
